# curso-ai-multiagentes

./: .gitignore  CONFIGURACAO_AMBIENTE.md  CREWAI_REFERENCE.md  DICAS.md  INICIO_RAPIDO.md  LICENSE  MIGRACAO_UV.md  README.md  STATUS_UV.md  UV_GUIDE.md  configurar.py  curso.md  exemplo_otimizacao_openai.py  hello_crewai.py  hello_simples.py  main.py  pyproject.toml  requirements.txt  teste_api.py  verificar_openai.py
aula1/: main.py
aula2/: README.md  README_SOLUCOES.md  exercicio1_agencia_marketing.md  exercicio1_solucao.py  exercicio2_atendimento_cliente.md  exercicio2_solucao.py  exercicio3_desenvolvimento_produto.md  exercicio3_solucao.py  main.py
aula3/: README.md  exercicios.md  main.py
aula4/: INSTRUCOES.md  README.md  README_EXERCICIOS.md  exemplo_exercicio1.py  exemplo_simples.py  exercicios_alunos.md  guia_implementacao.md  main.py  template_exercicios.py
aula5/: EXERCICIOS_PRATICOS.md  INSTRUCOES_EXECUCAO.md  README.md  main.py
aula5/exemplos/: 01_prompt_engineering.py  02_configuracao_modelos.py  03_testes_agentes.py  04_monitoramento.py
aula5/exercicios/: exercicio1_prompts.py  exercicio2_config.py  exercicio3_testes.py
aula5/templates/: agente_otimizado.py  suite_testes.py
docs/: ATUALIZACAO_INSTRUCOES_SEGURANCA_ECONOMIA.md  CURSO.md  GUIA_BOAS_PRATICAS_PROMPTS.md  GUIA_OTIMIZACAO_OPENAI.md  GUIA_PROCESSOS_CREWAI.md  GUIA_SEGURANCA.md  INDICE_OTIMIZACAO.md  INICIO_RAPIDO.md  README_OTIMIZACAO.md  RESUMO_OTIMIZACAO_OPENAI.md  STATUS_UV.md  UV_GUIDE.md
src/curso_crewai/: __init__.py  configurar.py  hello_crewai.py
